--- a/equipe.html
+++ b/equipe.html
@@ -73,7 +73,7 @@
                         </div>
                         <div class="card-content d-flex flex-column align-items-center">
                             <h4 class="pt-2">Dayane</h4>
-                            <h5>Dev e Designer</h5>n
+                            <h5>Dev e Designer</h5>
 
                             <ul class="social-icons d-flex justify-content-center">
                                 <li style="--i:1">
