--- a/equipe.html
+++ b/equipe.html
@@ -6,34 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="imagem/png" href="" />
+
     <link rel="stylesheet" href="assets/css/equipe.css">
     <link rel="stylesheet" href="assets/css/global.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-7blxP0oU20rpnp3XuF7VU4p6mZ7VgGElmKj7lnRlyoy6aA7gQ2XamNlL0Q2gJ/YB5l5/+p8z+sKtgG0f0xOfkg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
+
     <title>Iniciar</title>
 </head>
 
 <body>
     <header class="header">
         <div class="container">
-            <ul class="nav nav-tabs">
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="index.html">Início</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="equipe.html">Equipe</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="calculo.html">Calculo</a>
-                </li>
-            </ul>
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="#">
+                    <img src="assets/img/logo if branco.png" width="" height="30" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="equipe.html">Equipe</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="calculo.html">Calculo</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </header>
     <main class="main container">
-        <div class="container">
+       
             <h1 class="title text-center">Equipe</h1>
             <div class="row">
                 <div class=".col-xs-6 .col-sm-3">
@@ -68,7 +77,7 @@
                 <div class=".col-xs-6 .col-sm-3">
                     <div class="card p-0">
                         <div class="card-image">
-                            <img src=""
+                            <img src="assets/img/dayane.jpg"
                                 alt="">
                         </div>
                         <div class="card-content d-flex flex-column align-items-center">
@@ -156,7 +165,7 @@
                     </div>
                 </div>
 
-            </div>
+           
         </div>
     </main>
     <footer class="footer">
@@ -164,18 +173,6 @@
             <p class="text-center">&copy; Todos os direitos reservados</p>
         </div>
     </footer>
-
-    <script src="assets/js/equipe.js"></script>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
