--- a/calculo.html
+++ b/calculo.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
 
-    <title>Iniciar</title>
+    <title>Calculo</title>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
         </div>
     </header>
     <main class="main container">
-        <h1 class="title text-center">Bases Binárias</h1>
+        <h1 class="title text-center">Calculo</h1>
         <label for="decimal">Digite um valor decimal:</label>
         <input type="text" id="decimal" name="decimal"><br><br>
         <button
