--- a/equipe.html
+++ b/equipe.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
 
-    <title>Iniciar</title>
+    <title>Equipe</title>
 </head>
 
 <body>
@@ -42,130 +42,123 @@
         </div>
     </header>
     <main class="main container">
-       
-            <h1 class="title text-center">Equipe</h1>
-            <div class="row">
-                <div class=".col-xs-6 .col-sm-3">
-                    <div class="card p-0">
-                        <div class="card-image">
-                            <img src="assets/img/amanda.jfif"
-                                alt="">
-                        </div>
-                        <div class="card-content d-flex flex-column align-items-center">
-                            <h4 class="pt-2">Amanda</h4>
-                            <h5>Dev e Designer</h5>
-                            <ul class="social-icons d-flex justify-content-center">
-                                <li style="--i:1">
-                                    <a href="#">
-                                        <span class="fab fa-facebook"></span>
-                                    </a>
-                                </li>
-                                <li style="--i:2">
-                                    <a href="#">
-                                        <span class="fab fa-twitter"></span>
-                                    </a>
-                                </li>
-                                <li style="--i:3">
-                                    <a href="#">
-                                        <i class="fa-brands fa-instagram"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+        <h1 class="title text-center">Equipe</h1>
+        <div class="row">
+            <div class=".col-xs-6 .col-sm-3">
+                <div class="card p-0">
+                    <div class="card-image">
+                        <img src="assets/img/amanda.jfif" alt="">
+                    </div>
+                    <div class="card-content d-flex flex-column align-items-center">
+                        <h4 class="pt-2">Amanda</h4>
+                        <h5>Dev e Designer</h5>
+                        <ul class="social-icons d-flex justify-content-center">
+                            <li style="--i:1">
+                                <a href="#">
+                                    <span class="fab fa-facebook"></span>
+                                </a>
+                            </li>
+                            <li style="--i:2">
+                                <a href="#">
+                                    <span class="fab fa-twitter"></span>
+                                </a>
+                            </li>
+                            <li style="--i:3">
+                                <a href="#">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-                <div class=".col-xs-6 .col-sm-3">
-                    <div class="card p-0">
-                        <div class="card-image">
-                            <img src="assets/img/dayane.jpg"
-                                alt="">
-                        </div>
-                        <div class="card-content d-flex flex-column align-items-center">
-                            <h4 class="pt-2">Dayane</h4>
-                            <h5>Dev e Designer</h5>
+            </div>
+            <div class=".col-xs-6 .col-sm-3">
+                <div class="card p-0">
+                    <div class="card-image">
+                        <img src="assets/img/dayane.jpg" alt="">
+                    </div>
+                    <div class="card-content d-flex flex-column align-items-center">
+                        <h4 class="pt-2">Dayane</h4>
+                        <h5>Dev e Designer</h5>
 
-                            <ul class="social-icons d-flex justify-content-center">
-                                <li style="--i:1">
-                                    <a href="#">
-                                        <span class="fab fa-facebook"></span>
-                                    </a>
-                                </li>
-                                <li style="--i:2">
-                                    <a href="#">
-                                        <span class="fab fa-twitter"></span>
-                                    </a>
-                                </li>
-                                <li style="--i:3">
-                                    <a href="#">
-                                        <span class="fab fa-instagram"></span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+                        <ul class="social-icons d-flex justify-content-center">
+                            <li style="--i:1">
+                                <a href="#">
+                                    <span class="fab fa-facebook"></span>
+                                </a>
+                            </li>
+                            <li style="--i:2">
+                                <a href="#">
+                                    <span class="fab fa-twitter"></span>
+                                </a>
+                            </li>
+                            <li style="--i:3">
+                                <a href="#">
+                                    <span class="fab fa-instagram"></span>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-                <div class=".col-xs-6 .col-sm-3">
-                    <div class="card p-0">
-                        <div class="card-image">
-                            <img src="assets/img/deyvison.jfif"
-                                alt="">
-                        </div>
-                        <div class="card-content d-flex flex-column align-items-center">
-                            <h4 class="pt-2">Deyvison</h4>
-                            <h5>Dev e Designer</h5>
+            </div>
+            <div class=".col-xs-6 .col-sm-3">
+                <div class="card p-0">
+                    <div class="card-image">
+                        <img src="assets/img/deyvison.jfif" alt="">
+                    </div>
+                    <div class="card-content d-flex flex-column align-items-center">
+                        <h4 class="pt-2">Deyvison</h4>
+                        <h5>Dev e Designer</h5>
 
-                            <ul class="social-icons d-flex justify-content-center">
-                                <li style="--i:1">
-                                    <a href="#">
-                                        <span class="fab fa-facebook"></span>
-                                    </a>
-                                </li>
-                                <li style="--i:2">
-                                    <a href="#">
-                                        <span class="fab fa-twitter"></span>
-                                    </a>
-                                </li>
-                                <li style="--i:3">
-                                    <a href="#">
-                                        <span class="fab fa-instagram"></span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+                        <ul class="social-icons d-flex justify-content-center">
+                            <li style="--i:1">
+                                <a href="#">
+                                    <span class="fab fa-facebook"></span>
+                                </a>
+                            </li>
+                            <li style="--i:2">
+                                <a href="#">
+                                    <span class="fab fa-twitter"></span>
+                                </a>
+                            </li>
+                            <li style="--i:3">
+                                <a href="#">
+                                    <span class="fab fa-instagram"></span>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-                <div class=".col-xs-6 .col-sm-3">
-                    <div class="card p-0">
-                        <div class="card-image">
-                            <img src="assets/img/nanda.jfif"
-                                alt="">
-                        </div>
-                        <div class="card-content d-flex flex-column align-items-center">
-                            <h4 class="pt-2">Maria Fernanda</h4>
-                            <h5>Dev e Designer</h5>
+            </div>
+            <div class=".col-xs-6 .col-sm-3">
+                <div class="card p-0">
+                    <div class="card-image">
+                        <img src="assets/img/nanda.jfif" alt="">
+                    </div>
+                    <div class="card-content d-flex flex-column align-items-center">
+                        <h4 class="pt-2">Maria Fernanda</h4>
+                        <h5>Dev e Designer</h5>
 
-                            <ul class="social-icons d-flex justify-content-center">
-                                <li style="--i:1">
-                                    <a href="#">
-                                        <i class="fa-brands fa-facebook"></i>
-                                    </a>
-                                </li>
-                                <li style="--i:2">
-                                    <a href="#">
-                                        <span class="fab fa-twitter"></span>
-                                    </a>
-                                </li>
-                                <li style="--i:3">
-                                    <a href="#">
-                                        <span class="fa-brands fa-instagram"></span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+                        <ul class="social-icons d-flex justify-content-center">
+                            <li style="--i:1">
+                                <a href="#">
+                                    <i class="fa-brands fa-facebook"></i>
+                                </a>
+                            </li>
+                            <li style="--i:2">
+                                <a href="#">
+                                    <span class="fab fa-twitter"></span>
+                                </a>
+                            </li>
+                            <li style="--i:3">
+                                <a href="#">
+                                    <span class="fa-brands fa-instagram"></span>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-
-           
+            </div>
         </div>
     </main>
     <footer class="footer">
