--- a/equipe.html
+++ b/equipe.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="assets/css/equipe.css">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/brands.css">
+    <link rel="stylesheet" href="assets/css/solid.css">
 
     <title>Equipe</title>
 </head>
@@ -43,19 +44,17 @@
     </header>
     <main class="main container">
         <h1 class="title text-center">Equipe</h1>
-        <div class="row pb-5 mb-4">
+        <div class="row pb-5 mb-4 text-center">
             <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                 <!-- Card-->
-                <div class="card shadow-sm border-0 rounded">
+                <div class="card shadow-sm border-0 rounded ">
                     <div class="card-body p-0"><img src="assets/img/amanda.jfif" alt="" class="w-100 card-img-top">
                         <div class="p-4">
                             <h5 class="mb-0">Amanda</h5>
-                            <p class="small text-muted">Front-End / Back-End</p>
+                            <p class="small text-muted">Front/Back-End</p>
                             <ul class="social mb-0 list-inline mt-3">
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa-brands fa-github"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa-brands fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -70,10 +69,9 @@
                             <h5 class="mb-0">Dayane</h5>
                             <p class="small text-muted">Back-End</p>
                             <ul class="social mb-0 list-inline mt-3">
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa-brands fa-github"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa-brands fa-linkedin"></i></a></li>
+                            </ul>
                             </ul>
                         </div>
                     </div>
@@ -88,10 +86,8 @@
                             <h5 class="mb-0">Deyvison</h5>
                             <p class="small text-muted">Back-End</p>
                             <ul class="social mb-0 list-inline mt-3">
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa-brands fa-github"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa-brands fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -106,10 +102,8 @@
                             <h5 class="mb-0">Maria Fernanda</h5>
                             <p class="small text-muted">Back-End</p>
                             <ul class="social mb-0 list-inline mt-3">
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
-                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa-brands fa-github"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa-brands fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
